[CYL-2764] Added proxy setting implementation from https://github.com/jpkrause/AndroidProxySetter to TestButler

--- a/test-butler-app/build.gradle
+++ b/test-butler-app/build.gradle
@@ -63,6 +63,7 @@ repositories {
 
 dependencies {
     provided 'com.android.support:support-annotations:23.4.0'
+	compile 'be.shouldit:android-proxy-library:4.2.6'
 }
 
 if (!rootProject.ext.isCi) {
